# sqlachemy_lecture

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
lecture_scripts/: fill_db.py  models.py
lecture_scripts/base_1/: base_class_with_annotation_4.py  connection_3.py  create_tables_helper_6.py  models_more_features_8.py  models_old_approach_7.py  simple_model_2.py
lecture_scripts/joins_5/: any_func_11.py  contains_eager_7.py  join_from_func_9.py  join_with_custom_subquery_8.py  joined_load_problem_ordering_6.py  joineload_2.py  lazy_loading_1.py  load_only_some_columns_12.py  many_to_many_13.py  raise_loading_5.py  select_from_10.py  selectin_load_3.py  subquery_4.py
lecture_scripts/orm_session_object_3/: delete_worker_3.py  expired_5.py  flush_4.py  get_worker_2.py  insert_workers_1.py  refresh_6.py
lecture_scripts/orm_simple_queries_2/: insert_workers_1.py  select_one_4.py  select_one_or_none_3.py  select_scalars_2.py  update_worker_5.py
lecture_scripts/other_6/: bulk_insert_2.py  having_group_by_1.py
lecture_scripts/relations_4/: add_relation_objects_4.py  many_to_many_2.py  one_to_many_1.py  other_configurations_3.py
