[tool.poetry]
name = "sqlachemy-lecture"
version = "0.1.0"
description = ""
authors = ["Illia Troshchynskyi <illia.troshchynskyi@nixs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
psycopg = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
